feat(login e index): adicionar validação de tela de login

--- a/AA8/index.html
+++ b/AA8/index.html
@@ -12,6 +12,7 @@
     <script src="./js/password_visibility.js" defer></script>
     <script src="./js/CPFValidator.js" defer></script>
     <script src="./js/passwordValidator.js" defer></script>
+    <script src="./js/login.js" defer></script>
     <title>Prática JavaScript</title>
 </head>
 <body>
